package fr.univnantes.alma.ServerImplementation.networkingimpl;

import fr.univnantes.alma.core.controler.NetworkControler;
import org.springframework.stereotype.Controller;

public class NetworkControlerImpl implements NetworkControler {
}
