package fr.univnantes.alma.core.commands;

public interface Resource {
}
