package fr.univnantes.alma.core.game;

import fr.univnantes.alma.core.commands.Resource;

import java.util.Collection;

public interface GameFacade {
    void start();
    void end();
    void endPlayerTurn();

}
