package fr.univnantes.alma.core.game;

public interface Player {
}
