@startuml
package client {
    package core {
        package game {
        	interface Player{}
        	interface Resource{}
        	interface Coordinates{}
            interface GameFacade {
	        	+removeResourcesTo(Player, Resource[])
	        	+addResourcesTo(Player, Resource[])
	        	+removeResourcesTo(Player, Resource[])
            }
        }
        package commands {
            interface CommandLoginFactory{
	    		+createCommandLogin(Content) : Command
	    	}
	    	note right : The login of the server
	    	
            interface CommandGameFactory {
            	+ActivateThieve(Player[]) : Command
            	+MoveThieve(Player[], Coordinates) : Command
            	+Ping(Player[]) : Command
            	+Build(Player[], Building) : Command
            	+ActiveCard(Player[], Card) : Command
            	+AddCard(Player[], Player, Integer) : Command
            	+BuyCard(Player[], Resource[]) : Command
            	+StartTurn(Player[], Player) : Command
            	+EndTurn(Player[], Player) : Command
            	+TradeWithNonPlayerEntity(Player, Resource[], Resource[] ) : Command
            	+TradeWithPlayer(Player, Resource[], Player, Resource[]) : Command
            	+DenyTrade(Player, Player) : Command
            	+AcceptTrade(Player, Player) : Command
            }
            interface Command <<Runnable>>{
                +getRecipients() : Player[]
            }

            interface Serializer {
                +serialize(Command): String
                +deSerialize(String): Command
            }
            
            abstract AbstractCommand implements Command{}
            AbstractCommand *-up- "1-4"  Player
        }

        package networking {
            interface ConnectionHandler {
                +sendCommand(Command)
                +isEnabled(): Boolean
                +addServer(Login)
            }
        }

        package controler {
            interface NetworkControler {
            	+sendCommand(Command)
            	+addServer(Login)
            }
            note right: Network management "module"

            interface GameControler{
                +receiveCommand(Command)
                +addServer(Login)
                
            	+ActivateThieve()
            	+MoveThieve()
            	+Ping()
            	+Build()
            	+ActiveCard()
            	+AddCard()
            	+BuyCard()
            	+StartTurn()
            	+EndTurn()
				+TradeWithNonPlayerEntity()
            	+TradeWithPlayer()
            	+DenyTrade()
            	+AcceptTrade()
            }

        }

    }
      
    package clientImpl {
        package commandsImpl {
            class SerializerImpl <<Serializer>>{}
            class CommandGameFactoryImpl <<CommandGameFactory>>{}

        }

        package networkingImpl {
            class WebSocketAdapterImpl <<ConnectionHandler>>{
               -server: Socket
            }
            class NetworkControlerImpl <<NetworkControler>>{}

            
            NetworkControlerImpl *-- ConnectionHandler
		   	class Message{
		    	+content : String
		    }
        }
        package controlerImpl {

            class GameControlerImpl <<GameControler>>{
                -me : Player
                -commands: Command[]
            }
            GameControlerImpl *-- "1" CommandGameFactory
            GameControlerImpl *-- "1" GameFacade
            GameControlerImpl *-- "1" Serializer
            GameControlerImpl *-- "3-4" Player
            
        }
    }
 
    
    package managment{
    		class CommandLoginFactoryWebSocket <<CommandLoginFactory>>{}
    		
		    class ClientGameManager{
		    	+createTheParty()
		    	+connectServer(Command)
		    }
			
		    class Client {
		        {static}+main()
		    }
		    
		    ClientGameManager "1" *-- "*" GameControler
		    ClientGameManager "1" *-- "1" CommandLoginFactory
		    Client "1" *-- "1" ClientGameManager
            ServerGameManager *-up- "1" NetworkControler
    
    }


}
@enduml
